# rent-fic-bancol-pdf-bot

./: .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: daily_job.yml
data/: debug_last_markdown.txt  processed_files.json
src/rent_fic_bancol_pdf_bot/: config.py  download.py  history.py  main.py  pdf_processor.py
